Made it do the things

--- a/public/index.html
+++ b/public/index.html
@@ -6,21 +6,9 @@
         <meta charset="UTF-8">
         <title>Spotify Group Playlist Creator</title>
 
-        <style type="text/css">
-            #login, #loggedin, #playlist-before, #playlist-after  {
-                display: none;
-            }
-            .text-overflow {
-                overflow: hidden;
-                text-overflow: ellipsis;
-                white-space: nowrap;
-                width: 500px;
-            }
-        </style>
 
     </head>
     <body>
-
         <header>
 
             <div class = "logo">
@@ -28,13 +16,6 @@
             <h1>Spotify Group Playlist Creator</h1>
             <p>Log in and add to the playlist</p>
         </header>
-        <nav>
-            <ul>
-                <li><a class="active">Login</a></li>
-                <li><a>Other</a></li>
-                <li><a>Other</a></li>
-            </ul>
-        </nav>
 
         <main>
 
@@ -43,7 +24,7 @@
             <div id="login">
 
                 <h1>This is an example of the Authorization Code flow</h1>
-                <a href="/login" class="btn btn-primary">Log in with Spotify</a>
+                <a href="/login" class="btn button">Log in with Spotify</a>
 
             </div>
 
@@ -57,7 +38,7 @@
                 <div id = "choose-playlist">
 
                     <input type = "text" id = "choose-playlist-input"/>
-                    <button class = "button" id="choose-playlist-button">Choose Playlist</button>
+                    <button class = "btn" id="choose-playlist-button">Choose Playlist</button>
 
                 </div>
 
@@ -72,21 +53,39 @@
 
                 <div id = "playlist-before">
                     <input type = "text" id = "search-input"/>
-                    <select id = "search-select">
-                        <option value="artist">Artist</option>
-                        <option value="track">Song</option>
-                    </select>
-                    <button class = "button" id="search-button">Search</button>
+                    
+                    <button class = "btn" id="search-button">Search</button>
 
                     <br>
-
-                    <div id="items">    
-                    </div>
+                    <select id = "search-select">
+                        <option value="track">Song</option>
+                        <option value="artist">Artist</option>
+                    </select>
 
                 </div>
                 <!-- --------Playlist after search------ -->
 
                 <div id = "playlist-after">
+
+                    <table style = "width: 100%; table-layout: fixed;">
+                        <tr>
+                            <td style = "width: 100%;"> 
+                                <h1>Search result</h1>
+                                <h2 id = "search-value"></h2>
+                                <select id="search-items" size = "20" style = "width: 100%;">    
+
+                                </select>
+                            </td>                
+                            <td style = "width: 100%;">
+                                <h1>Playlist</h1>
+                                <h2>temporary playlist name</h2>
+                                <select id="playlist-items" size = "20" style = "width: 100%;">    
+
+                                </select>
+                            </td>
+                        </tr>
+                    </table>
+                    <button class = "btn">Add Song</button>
 
                 </div>
 
@@ -125,18 +124,16 @@
     </script>
 
 
-<script id="artist-template" type="text/x-handlebars-template">
+    <script id="artist-template" type="text/x-handlebars-template">
 <tr>
     <td>{{name}}</td>
-</tr>
-</script>
+        </tr>
+    </script>
 
-    <script id="song-template" type="text/x-handlebars-template">
+<script id="song-template" type="text/x-handlebars-template">
 <tr>
     <td>{{name}}, </td>
-    <td>{{artists.0.name}}, </td>
-    <td>{{album.name}}</td>
-
+    <td>{{artists.0.name}}, </td>        
 </tr>
 </script>
 
@@ -233,7 +230,7 @@
 
                 if(searchRaw === ""){
                     console.log("Unable to search for \"nothing\"")
-                    document.getElementById("items").innerHTML = "";
+                    document.getElementById("search-items").innerHTML = "";
                     return;
                 }
                 else if(type != "artist" && type != "track"){
@@ -247,19 +244,27 @@
                         'Authorization': 'Bearer ' + access_token
                     },
                     success: function(response) {
-                                                    console.log(response);
+                        console.log(response);
+                        $('#playlist-before').hide();
+                        $('#playlist-after').show();
+                        
+                        document.getElementById("search-value").innerHTML =  searchRaw;
 
                         if(type == "artist"){
                             var size = Object.keys(response.artists.items).length;
                             if(size>0){
                                 for(var i =0; i<size; i++){
-                                    var newElement = document.createElement('div');
-                                    newElement.id = "item"+i; 
-                                    newElement.className = "item";
-                                    document.getElementById("items").appendChild(newElement);
+                                    var newElement = document.createElement('option');
+
+                                    newElement.id = "search-item"+i; 
+                                    newElement.className = "search-item";
+                                    if(i%2 == 0){
+                                        newElement.setAttribute("style", "background: #DADADA;");
+                                    }
+                                    document.getElementById("search-items").appendChild(newElement);
                                     var source = document.getElementById('artist-template').innerHTML;
                                     var template = Handlebars.compile(source);
-                                    var placeholder = document.getElementById('item'+i);
+                                    var placeholder = document.getElementById('search-item'+i);
 
                                     placeholder.innerHTML = template(response.artists.items[i]);
                                 }
@@ -267,20 +272,24 @@
                             else{
                                 //ERROR message - artist not found
                                 console.log("Artist not found");
-                                document.getElementById("items").innerHTML = "";
+                                document.getElementById("search-items").innerHTML = "";
                             }
                         }
                         else if(type == "track"){
                             var size = Object.keys(response.tracks.items).length;
                             if(size>0){
                                 for(var i =0; i<size; i++){
-                                    var newElement = document.createElement('div');
-                                    newElement.id = "item"+i; 
-                                    newElement.className = "item";
-                                    document.getElementById("items").appendChild(newElement);
+                                    var newElement = document.createElement('option');
+
+                                    newElement.id = "search-item"+i; 
+                                    newElement.className = "search-item";
+                                    if(i%2 == 0){
+                                        newElement.setAttribute("style", "background: #DADADA;");
+                                    }
+                                    document.getElementById("search-items").appendChild(newElement);
                                     var source = document.getElementById('song-template').innerHTML;
                                     var template = Handlebars.compile(source);
-                                    var placeholder = document.getElementById('item'+i);
+                                    var placeholder = document.getElementById('search-item'+i);
 
                                     placeholder.innerHTML = template(response.tracks.items[i]);
                                 }
@@ -288,7 +297,7 @@
                             else{
                                 //ERROR message - artist not found
                                 console.log("Song not found");
-                                document.getElementById("items").innerHTML = "";
+                                document.getElementById("search-items").innerHTML = "";
                             }
                         }
 
