--- a/public/index.html
+++ b/public/index.html
@@ -143,27 +143,49 @@
 
 <!-- ----------------Main Script------------------ -->
 
+/* ---------- FIREBASE ---------------*/
+
+<script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-firestore.js"></script>
 <script>
-    /* ---------- FIREBASE ---------------*/
-    firebase.initializeApp({
-        credential: admin.credential.applicationDefault()
-    });
+    // Initialize Firebase
+    var config = {
+        apiKey: "AIzaSyA-KjQUMkefMJcThHIHCg5bBHy_fWuBfj8",
+        authDomain: "clouda2jm.firebaseapp.com",
+        databaseURL: "https://clouda2jm.firebaseio.com",
+        projectId: "clouda2jm",
+        storageBucket: "clouda2jm.appspot.com",
+        messagingSenderId: "548327908086"
+    };
+    firebase.initializeApp(config);
 
     var db = firebase.firestore();
 
-    const playlist = document.querySelector("#choose-playlist-input")
-    const choosePlaylist = document.querySelector("#choose-playlist-button");
-    const song = document.querySelector("#song-return");
+
+
+    var playlist = document.getElementById("choose-playlist-input");
+    var choosePlaylist = document.getElementById("choose-playlist-button");
+    var song = document.getElementById("song-return");
 
     choosePlaylist.addEventListener("click", function(){
 
-        const text = playlist.value;
-        const docref = db.doc("playlist/"+ text);
+        var text = playlist.value;
 
-        if(docref && docref.exists){
-            const doc = docref.data();
-            song.innerText = doc.name;
-        }
+        db.collection("playlist").add({
+            creatorID: "1h3g47321b",
+            name: text,
+            songs: [{
+                song: "Song 2",
+                artist: "Blur",
+                id: "123ghuf7832vi"
+            }]
+        })
+            .then(function(docRef) {
+            console.log("Document written with ID: ", docRef.id);
+        })
+            .catch(function(error) {
+            console.error("Error adding document: ", error);
+        });
 
     });
 </script>
