--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,7 @@
 
             <div class = "logo">
             </div>
-            <h1>Spotify Group Playlist Creator</h1>
-            <p>Log in and add to the playlist</p>
+            <h1>Playlister</h1>
         </header>
 
         <main>
@@ -23,7 +22,7 @@
 
             <div id="login">
 
-                <h1>This is an example of the Authorization Code flow</h1>
+                <h1>Login or Signup</h1>
                 <a href="/login" class="btn button">Log in with Spotify</a>
 
             </div>
@@ -75,7 +74,7 @@
                             </td>                
                             <td id = "playlist" style = "width: 100%;">
                                 <h1>Playlist</h1>
-                                <h2>temporary playlist name</h2>
+                                <h2>Temporary Playlist Name</h2>
                                 <select id="playlist-items" size = "20" style = "width: 100%;">    
 
                                 </select>
