--- a/public/index.html
+++ b/public/index.html
@@ -23,16 +23,22 @@
 
             <div id="loader"></div>
 
-            <div id="login">
+            <div id="auth">
 
-                <h1>This is an example of the Authorization Code flow</h1>
-                <input type = 'text' id = 'emailIn' placeholder = "Email">
-                <input type = 'password' id = 'passwordIn' placeholder = "Password">
-                <input type = 'password' id = 'passwordConf' placeholder = "Password">
-
-                <a id = 'loginBtn' class="btn button">Log in</a>
-                <a id = 'signupBtn' class="btn button">Sign up</a>
-                <a id = 'signupInsteadBtn' class="btn button">Did you want to signup instead?</a>
+                <div id = 'initialPage'>
+                    <a id = 'goToLogin' class="btn button">Log in</a>
+                    <a id = 'goToSignup' class="btn button">Sign up</a>
+                </div>
+                <div id = "loginPage">
+                    <input type = 'text' id = 'emailIn' placeholder = "Email">
+                    <input type = 'password' id = 'passwordIn' placeholder = "Password">
+                    <a id = 'loginBtn' class="btn button">Log in</a>
+                </div>
+                <div id = "signupPage">
+                    <a id = 'loginBtn' class="btn button">Log in</a>
+                    <a id = 'signupBtn' class="btn button">Sign up</a>
+                    <a id = 'signupInsteadBtn' class="btn button">Did you want to signup instead?</a>
+                </div>
                 <div id = "alert" class="alert">
                 </div>
 
