Something is done didditty. I think it is fairly organise fam but we shall see

--- a/public/index.html
+++ b/public/index.html
@@ -24,33 +24,27 @@
 
             <div id="auth">
 
-<<<<<<< HEAD
                 <div id = 'initialPage'>
-                    <a id = 'goToLogin' class="btn button">Log in</a>
-                    <a id = 'goToSignup' class="btn button">Sign up</a>
+                    <button id = 'goToLogin' class="btn button">Log in</button >
+                    <br>
+                    <button  id = 'goToSignup' class="btn button">Sign up</button >
                 </div>
                 <div id = "loginPage">
-                    <input type = 'text' id = 'emailIn' placeholder = "Email">
-                    <input type = 'password' id = 'passwordIn' placeholder = "Password">
-                    <a id = 'loginBtn' class="btn button">Log in</a>
+                    <input type = 'text' id = 'loginEmail' placeholder = "Email">
+                    <br>
+                    <input type = 'password' id = 'loginPassword' placeholder = "Password">
+                    <br>
+                    <button  id = 'loginBtn' class="btn button">Log in</button >
                 </div>
                 <div id = "signupPage">
-                    <a id = 'loginBtn' class="btn button">Log in</a>
-                    <a id = 'signupBtn' class="btn button">Sign up</a>
-                    <a id = 'signupInsteadBtn' class="btn button">Did you want to signup instead?</a>
+                    <input type = 'text' id = 'signupEmail' placeholder = "Email">
+                    <br>
+                    <input type = 'password' id = 'signupPassword' placeholder = "Password">
+                    <br>
+                    <input type = 'password' id = 'signupConfirm' placeholder = "Confirm">
+                    <br>
+                    <button  id = 'signupBtn' class="btn button">Log in</button >
                 </div>
-=======
-
-                <h1>Login or Signup</h1>
-
-                <input type = 'text' id = 'emailIn' placeholder = "Email">
-                <input type = 'password' id = 'passwordIn' placeholder = "Password">
-                <input type = 'password' id = 'passwordConf' placeholder = "Password">
-
-                <a id = 'loginBtn' class="btn button">Log in</a>
-                <a id = 'signupBtn' class="btn button">Sign up</a>
-                <a id = 'signupInsteadBtn' class="btn button">Did you want to signup instead?</a>
->>>>>>> c4cf3a4412d983c69e005b6191ef4f4b64b44e9f
                 <div id = "alert" class="alert">
                 </div>
 
@@ -69,6 +63,7 @@
                         <li><input type = "text" id = "choose-playlist-input"/></li>
                         <li><button class = "btn" id="choose-playlist-button">Choose Playlist</button></li>
                         <li style = "float: right;"><button class = "btn" id="create-playlist-button">Create Playlist</button></li>
+                        <li style = "float: right;"><button class = "btn" id="signout">Signout</button></li>
                     </ul>
 
                 </div>
