--- a/public/index.html
+++ b/public/index.html
@@ -179,6 +179,8 @@
 
 
 <!-- Functions can only be called if declared before reference  -->
+<script src = "js/changeView.js">
+</script>
 <script src = "js/firebase.js">
 </script>
 <script src = "js/spotify.js">
