--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
         <link rel="stylesheet" type="text/css" href="index.css">
         <meta charset="UTF-8">
         <title>Spotify Group Playlist Creator</title>
-
-
+		<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -14,6 +13,7 @@
             <div class = "logo">
             </div>
             <h1>Playlister</h1>
+			<h1 id = "subhead">The worlds greatest playlist website </h1>
         </header>
 
         <main>
@@ -41,9 +41,9 @@
                     <br>
                     <input type = 'password' id = 'signupPassword' placeholder = "Password">
                     <br>
-                    <input type = 'password' id = 'signupConfirm' placeholder = "Confirm">
+                    <input type = 'password' id = 'signupConfirm' placeholder = "Confirm Password">
                     <br>
-                    <button  id = 'signupBtn' class="btn button">Log in</button >
+                    <button  id = 'signupBtn' class="btn button">Create Account</button >
                 </div>
                 <div id = "alert" class="alert">
                 </div>
@@ -62,8 +62,9 @@
                     <ul>
                         <li><input type = "text" id = "choose-playlist-input"/></li>
                         <li><button class = "btn" id="choose-playlist-button">Choose Playlist</button></li>
-                        <li style = "float: right;"><button class = "btn" id="create-playlist-button">Create Playlist</button></li>
+                        
                         <li style = "float: right;"><button class = "btn" id="signout">Signout</button></li>
+						<li style = "float: right;"><button class = "btn" id="create-playlist-button">Create Playlist</button></li>
                     </ul>
 
                 </div>
