Google Log In Stuff

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
 		<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
     </head>
     <body>
+	
         <header>
-
             <div class = "logo">
             </div>
             <h1>Playlister</h1>
@@ -28,6 +28,7 @@
                     <button id = 'goToLogin' class="btn button">Log in</button >
                     <br>
                     <button  id = 'goToSignup' class="btn button">Sign up</button >
+					<button  id = 'goToGoog' class="btn button">Login with the Googz</button >
                 </div>
                 <div id = "loginPage">
                     <input type = 'text' id = 'loginEmail' placeholder = "Email">
@@ -35,6 +36,7 @@
                     <input type = 'password' id = 'loginPassword' placeholder = "Password">
                     <br>
                     <button  id = 'loginBtn' class="btn button">Log in</button >
+					
                 </div>
                 <div id = "signupPage">
                     <input type = 'text' id = 'signupEmail' placeholder = "Email">
