--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,13 @@
             <div id="auth">
 
                 <div id = 'initialPage'>
-                    <button id = 'goToLogin' class="btn button">Log in</button >
+                    <button id = 'goToLogin' class="btn button">Login</button >
                     <br>
                     <button  id = 'goToSignup' class="btn button">Sign up</button >
-					<button  id = 'goToGoog' class="btn button">Login with the Googz</button >
+					<br>
+					<button  id = 'goToGoog' class="btn button">Login with Google</button >
+					<br>
+					<button  id = 'goToSpot' class="btn button">Login with Spotify</button >
                 </div>
                 <div id = "loginPage">
                     <input type = 'text' id = 'loginEmail' placeholder = "Email">
