WHoop there it is

--- a/public/index.html
+++ b/public/index.html
@@ -167,9 +167,18 @@
 <tr>
     <td>{{name}}, </td>
     <td>{{artists.0.name}}, </td>        
-        </tr></script>
+        </tr>
+    </script>
+    <script id="song-template2" src = "template/song.js" type="text/x-handlebars-template">
+<tr>
+    <td>{{name}}, </td>
+    <td>{{artist}}, </td>        
+        </tr>
+    </script>
 
 </html>
+
+
 
 
 <!-- ----------------Main Script------------------ -->
