It works...its presentable

--- a/public/index.html
+++ b/public/index.html
@@ -104,8 +104,10 @@
                             </td>                
                             <td id = "playlist" style = "width: 100%;">
                                 <h1>Playlist</h1>
-                                <h2>Temporary Playlist Name</h2>
+                                <h2 id = "playlist-name"></h2>
                                 <select id="playlist-items" size = "20" style = "width: 100%;">    
+                                <button class = btn id = "sharePlaylist">Share Playlist</button>
+                                <p id = "shareLink"></p>
 
                                 </select>
                             </td>
