--- a/public/index.html
+++ b/public/index.html
@@ -105,15 +105,15 @@
                             <td id = "playlist" style = "width: 100%;">
                                 <h1>Playlist</h1>
                                 <h2 id = "playlist-name"></h2>
-                                <select id="playlist-items" size = "20" style = "width: 100%;">    
-                                <button class = btn id = "sharePlaylist">Share Playlist</button>
+                                <select id="playlist-items" size = "20" style = "width: 100%;"> 
+                                <button class = "btn" id="sharePlaylist">Share Playlist</button>
                                 <p id = "shareLink"></p>
 
                                 </select>
                             </td>
                         </tr>
                     </table>
-                    <button class = "btn">Add Song</button>
+                    <button id = "addSong" class = "btn">Add Song</button>
 
                 </div>
 
